[package]
name = "futgame"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "futgame"
path = "src/main.rs"

[lib]
name = "futgame"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
